--- a/MVP_ML_Fabiano_Barreto.ipynb
+++ b/MVP_ML_Fabiano_Barreto.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/mCCo7d8tyVs718QsWK+m",
+      "authorship_tag": "ABX9TyNYNrWihR7CBxl54Tq4X2re",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "\n",
         "\n",
         "\n",
-        "*   Contexto do problema e objetivo: previsão da quantidade de dias de atraso de entrega de mercadorias. A empresa na qual trabalho realiza operações de importação de insumos para suprir as necessidades do setor produtivo dentro dos prazos estabelecidos pelo departamento de produção. O modelo de previsão ajudaria no gerenciamento dos prazos para evitar interrupções do parque fabril e, consequentemente, prejuízos financeiros.\n",
+        "*   Contexto do problema e objetivo: previsão da quantidade de dias para entrega de mercadorias. A empresa na qual trabalho realiza operações de importação de insumos para suprir as necessidades do setor produtivo dentro dos prazos estabelecidos pelo departamento de produção. O modelo de previsão ajudaria no gerenciamento dos prazos para evitar interrupções do parque fabril e, consequentemente, prejuízos financeiros.\n",
         "*   Tipo de tarefa: regressão\n",
         "\n",
         "\n",
@@ -812,7 +812,7 @@
         "**4. Definição do Target, variáveis e divisão dos dados**\n",
         "\n",
         "\n",
-        "*   Como o ojetivo desse trabalho é ter um modelo de previsão da quantidade de dias de atraso, o Target escolhido é Transit_Days.\n",
+        "*   Como o ojetivo desse trabalho é ter um modelo de previsão da quantidade de dias para entrega, o Target escolhido é Transit_Days.\n",
         "\n",
         "\n",
         "*   A feature Shipment_ID será excluída da base de dados pois não é relevante para o modelo de previsão.\n",
